# fastpi-sqlalchemy-hex

./: .env.example  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py  utils.py
app/application/: auth_service.py  expense_service.py  user_service.py
app/domain/authentication/: entities.py
app/domain/expense/: entities.py
app/domain/user/: entities.py
app/infrastructure/postgres/: auth_repository.py  expense_repository.py  sqlalchemy_models.py  user_repository.py
app/ports/: auth_repository.py  expense_respository.py  user_repository.py
app/routers/: deps.py  main.py
app/routers/v1/: expense.py  login.py  user.py
creacion_bd/: 01_crear_tablas.sql  02_precarga_datos.sql
